--- a/FTWeb/View_Mobile/WX/hd/createteam.html
+++ b/FTWeb/View_Mobile/WX/hd/createteam.html
@@ -56,7 +56,7 @@
                 return;
             }
             if (confirm("确定要创建开奖团吗？")) {
-                window.location = "pay.html?hdmx=" + model.ID + "&tname=" + encodeURIComponent(model.TuanName);
+                window.location = "buygoods.html?hdmx=" + model.ID + "&tuanname=" + encodeURIComponent(model.TuanName);
             }
         }
     });
