--- a/FTWeb/View_Mobile/WX/hd/buygoods.html
+++ b/FTWeb/View_Mobile/WX/hd/buygoods.html
@@ -90,7 +90,7 @@
             <form class="mui-input-group">
                 <!-- 如果你是扫朋友的组团邀请码进入参与拼手气显示，否则隐藏 -->
                 <div class="mui-input-row mui-radio mui-left" ms-if="@tid">
-                    <label>参与拼手气(只有扫码进人显示)</label>
+                    <label>参与拼手气</label>
                     <input name="radio1" type="radio" checked="checked" value="1">
                 </div>
                 <div class="mui-input-row mui-radio mui-left" ms-if="!@tid">
