--- a/FTWeb/View_Mobile/WX/hd/myteam.html
+++ b/FTWeb/View_Mobile/WX/hd/myteam.html
@@ -39,8 +39,8 @@
                     <a attr="{href:'igkbet.html?ztid='+@el.ID}" ms-visible="el.iskj=='Y'">
                         <div class="getJoin">查看中奖</div>
                     </a>
-                    <a class="getJoin" style="width: 40%; float: left;" attr="{href:'igkbet.html?ztid='+@el.ID}" ms-visible="el.iskj=='N'">查看队员</a>
-                    <a class="getJoin" style="width: 40%; float: right;" ms-visible="el.iskj=='N'" attr="{href:'buygoods.html?tid='+el.ID}">拼手气</a>
+                    <a class="getJoin" style="width: 40%; float: left;" ms-attr="{href:'igkbet.html?ztid='+@el.ID}" ms-visible="el.iskj=='N'">查看队员</a>
+                    <a class="getJoin" style="width: 40%; float: right;" ms-visible="el.iskj=='N'" ms-attr="{href:'buygoods.html?tid='+el.ID}">拼手气</a>
 
                 </div>
 
