完善工作流程撤销机制，未审批的和被退回的都能撤回到草稿箱

--- a/FTWeb/ViewV5/index.html
+++ b/FTWeb/ViewV5/index.html
@@ -408,7 +408,7 @@
     <script src="/ViewV5/JS/avalon1.47.js?ver=1"></script>
     <script src="/ViewV5/JS/SZHLCommon.js"></script>
     <script src="/ViewV5/JS/fullcalendar/fullcalendar.min.js"></script>
-    <script src="/ViewV5/JS/index.js"></script>
+    <script src="/ViewV5/JS/index.js?v=2"></script>
 
     <script type="text/javascript">
         var clipboard = new Clipboard(".copyBtn");
