--- a/FTWeb/ViewV5/AppPage/APPVIEW.html
+++ b/FTWeb/ViewV5/AppPage/APPVIEW.html
@@ -31,7 +31,7 @@
                     <span ms-if="title2" ms-click="seltitle(3)" ms-class-1="cur:titletype==3"><i ms-if="titletype==3" class="iconfont icon-bookmark"></i>{{title2}}</span>
                     <div class="pr20" style="float: right;">
                         <button class="btn btn-info" ms-if="isEdit=='Y'" ms-click="Edit()">编辑</button>
-                      <button class="btn btn-info" ms-if="ISCANCEL=='Y'" ms-click="CancelWF()">撤回到草稿箱</button>
+                        <button class="btn btn-info" ms-if="ISCANCEL=='Y'||model.PIMODEL.IsCanceled == 'Y'" ms-click="CancelWF()">撤回到草稿箱</button>
 
                         <a class="btn btn-success" ms-if="isBack=='Y'" href="javascript:history.go(-1)">返回</a>
                         <a class="btn btn-info" ms-attr-href="/ViewV5/AppPage/{{FormCode}}/HtmlToWord.aspx?ID={{strId}}" target="_blank" ms-if="isExport">导出</a>
@@ -61,8 +61,8 @@
                     <span class="item-tit">附件</span>
                     <div class="fj clearfix mt10">
                         <div class="pull-left" ms-repeat-file="tpData">
-                            <img ms-if="ComFunJS.isPic(file.FileExtendName)" ms-class="img-rounded:ComFunJS.isPic(file.FileExtendName)" ms-on-click="viewfile(file)" ms-attr-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}&width=45&height=45" ms-attr-imgyt="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" style="border-radius:2px" />
-                            <img ms-click="viewfile(file)" style="height:45px;width:45px" ms-if="!ComFunJS.isPic(file.FileExtendName)" ms-attr-src="/ViewV5/images/qywd/{{file.FileExtendName}}.png" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'" />
+                            <img ms-if="ComFunJS.isPic(file.FileExtendName)" ms-class="img-rounded:ComFunJS.isPic(file.FileExtendName)" ms-on-click="viewfile(file)" ms-attr-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}&width=45&height=45" ms-attr-imgyt="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" style="border-radius: 2px" />
+                            <img ms-click="viewfile(file)" style="height: 45px; width: 45px" ms-if="!ComFunJS.isPic(file.FileExtendName)" ms-attr-src="/ViewV5/images/qywd/{{file.FileExtendName}}.png" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'" />
                             <div class="fj-cont c999 ft12">
                                 <p class="word-break">{{file.Name}}.{{file.FileExtendName}}<span>({{Math.round(file.FileSize/1024)}}kb)</span></p>
                                 <p class="mt5">
@@ -80,7 +80,7 @@
                 <div class="detail-item" ms-if="TASKDATA.size()!=0">
                     <span class="item-tit">审核流程</span>
                 </div>
-                <div class="detail-item" style="padding:0;margin:20px 0;overflow-x:auto;" ms-if="TASKDATA.size()!=0">
+                <div class="detail-item" style="padding: 0; margin: 20px 0; overflow-x: auto;" ms-if="TASKDATA.size()!=0">
                     <div class="lcspstep"></div>
                 </div>
             </div>
@@ -110,15 +110,15 @@
                         <div class="crm-dt-cont">
                             <i class="bg"></i>
                             <span class="wt"></span>
-                            <div style="margin:10px 30px;" class="c666">
+                            <div style="margin: 10px 30px;" class="c666">
 
                                 <p class="c999">{{ComFunJS.convertuser(item.CRUser)}} {{pf(item.Points)|html}}<span class="pull-right">{{item.CRDate|date("yyyy年MM月dd日 HH:mm")}}</span></p>
                                 <h3 class="crm-xg ft14 mt5" style="word-wrap: break-word; word-break: break-all;">{{ComFunJS.bqhContent(item.MSGContent)|html}}</h3>
 
                                 <div class="fj clearfix mt10" ms-if="item.FileList&&item.FileList.size()!=0">
                                     <div class="pull-left" ms-repeat-file="item.FileList">
-                                        <img ms-if="ComFunJS.isPic(file.FileExtendName)" ms-class="img-rounded:ComFunJS.isPic(file.FileExtendName)" ms-on-click="viewfile(file)" ms-attr-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}&width=45&height=45" ms-attr-imgyt="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" style="border-radius:2px" />
-                                        <img ms-click="viewfile(file)" style="height:40px;width:40px" ms-if="!ComFunJS.isPic(file.FileExtendName)" ms-attr-src="/ViewV5/images/qywd/{{file.FileExtendName}}.png" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'" />
+                                        <img ms-if="ComFunJS.isPic(file.FileExtendName)" ms-class="img-rounded:ComFunJS.isPic(file.FileExtendName)" ms-on-click="viewfile(file)" ms-attr-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}&width=45&height=45" ms-attr-imgyt="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" style="border-radius: 2px" />
+                                        <img ms-click="viewfile(file)" style="height: 40px; width: 40px" ms-if="!ComFunJS.isPic(file.FileExtendName)" ms-attr-src="/ViewV5/images/qywd/{{file.FileExtendName}}.png" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'" />
                                         <div class="fj-cont c999 ft12">
                                             <p class="word-break">{{file.Name}}.{{file.FileExtendName}}<span>({{Math.round(file.FileSize/1024)}}kb)</span></p>
                                             <p class="mt5">
@@ -129,7 +129,7 @@
                                     </div>
                                 </div>
                                 <p class="mt5 ft12 oh">
-                                    <a class="pull-right" style="color:blue;" ms-click="scpl(item)" ms-if="item.CRUser==nowuser">删除</a>
+                                    <a class="pull-right" style="color: blue;" ms-click="scpl(item)" ms-if="item.CRUser==nowuser">删除</a>
                                 </p>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
             shzt: "",
             isExport: false,
             isEdit: "N",
-            ISCANCEL:"N",
+            ISCANCEL: "N",
             plTitle: "评论",
             isEndTask: false,
             Temprender: function () {
@@ -209,10 +209,14 @@
             CancelWF: function () {//撤回表单到草稿箱
                 $.getJSON("/API/VIEWAPI.ashx?ACTION=LCSP_CANCELWF", { P1: model.PIID, DataID: model.strId, ModelCode: model.FormCode, P2: model.PIMODEL.PDID }, function (result) {
                     if (result.ErrorMsg == "") {//流程数据
-                        ComFunJS.winsuccess("操作成功,该表单已撤回到草稿箱");
                         model.ISCANCEL = "N";
+                        top.ComFunJS.winconfirm("操作成功,该表单已撤回到草稿箱,是否要重新发起该表单", function () {
+                            location.href = "/ViewV5/AppPage/APP_ADD_WF.html?FormCode=" + model.FormCode + "&PDID=" + model.PIMODEL.PDID + "&lctype=" + model.lctype;
+                        }, function () {
+                            top.layer.closeAll();
+                        })
                     }
-                }) 
+                })
             },
             getwfdata: function () {
                 $.getJSON("/API/VIEWAPI.ashx?ACTION=LCSP_GETWFDATA", { P1: model.PIID, DataID: model.strId, ModelCode: model.FormCode, P2: model.PDID }, function (result) {
@@ -500,7 +504,7 @@
                 return str;
             }
         });
-        avalon.ready(function () {  
+        avalon.ready(function () {
             var FormCode = ComFunJS.getQueryString("FormCode")
             if (FormCode.indexOf("_") > 0) {
                 model.PathCode = FormCode.split('_')[0];
