+工作流程新增流程分类功能,可以按照类别新增或查询工作流程(PC+微信) +工作流程中未审批的表单发起人可以选择撤回到草稿箱里（PC） +工作流程中被退回的表单发起人可以选择撤回到草稿箱里(PC) +添加工作流程步骤时可以删除和新增中间节点(PC) +修复流程节点超过10个出现的问题 +继续流程太长导致的审核按钮无法显示的问题 +修复工作流程在审核中不能修改扩展数据的问题 +修复手机端无法下载文件的bug +整理样式文件,去除一些不用的HTML文件 +修复了首次点击菜单时会重复发起请求的Bug

--- a/FTWeb/ViewV5/AppPage/XXFB/SelDraft.html
+++ b/FTWeb/ViewV5/AppPage/XXFB/SelDraft.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <link href="/ViewV5/CSS/WX.css" rel="stylesheet" />
+    <link href="/ViewV5/AppPage/XXFB/WX.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css">
     <style>
         .select {
