--- a/FTWeb/ViewV5/AppPage/XXFB/XXFB.html
+++ b/FTWeb/ViewV5/AppPage/XXFB/XXFB.html
@@ -259,7 +259,7 @@
         overflow: hidden;
     }
 </style>
-<link href="/ViewV5/CSS/WX.css" rel="stylesheet" />
+<link href="/ViewV5/AppPage/XXFB/WX.css" rel="stylesheet" />
 <div class="form-horizontal" ms-controller="XXFB">
     <div style="margin-right:400px;">
         <div class="form-group">
