--- a/FTWeb/ViewV5/AppPage/XXFB/XXFBSC.html
+++ b/FTWeb/ViewV5/AppPage/XXFB/XXFBSC.html
@@ -1,4 +1,4 @@
-﻿<link href="/ViewV5/CSS/WX.css" rel="stylesheet" />
+﻿<link href="/ViewV5/AppPage/XXFB/WX.css" rel="stylesheet" />
 <style>
     .mail-box-header h2 {
         margin-top: 0px;
