--- a/FTWeb/ViewV5/index.html
+++ b/FTWeb/ViewV5/index.html
@@ -104,6 +104,9 @@
                     <div ms-click="selyyType('RLZY',this)">
                         <a href="javascript:void(0);" class="yytype"><i class="iconfont icon-group mr5"></i>人力资源</a>
                     </div>
+                    <div ms-click="selyyType('YXHD',this)">
+                        <a href="javascript:void(0);" class="yytype"><i class="iconfont icon-group mr5"></i>营销活动</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -173,7 +176,7 @@
 
                         </div>
                         <!-- 下边内容 -->
-                        <div ms-visible="isshowload" class="main-content ft16 mt10 pt20 c666 box-shadow clearfix" ms-include-src="PageCode+'.html?r='+model.rdm" data-include-rendered='Temprender'>
+                        <div ms-visible="isshowload" class="main-content ft16 mt10 pt20 c666 box-shadow clearfix" ms-include-src="PageCode+'.html?r='+model.rdm"  data-include-rendered='Temprender'>
                         </div>
                         <div class="index-right" ms-if="ishasLeft">
                             <!-- 考勤 -->
@@ -405,7 +408,7 @@
     <script src="/ViewV5/JS/avalon1.47.js?ver=1"></script>
     <script src="/ViewV5/JS/SZHLCommon.js"></script>
     <script src="/ViewV5/JS/fullcalendar/fullcalendar.min.js"></script>
-    <script src="/ViewV5/JS/index.js"></script>
+    <script src="/ViewV5/JS/index.js?v=2"></script>
 
     <script type="text/javascript">
         var clipboard = new Clipboard(".copyBtn");
