--- a/FTWeb/ViewV5/AppPage/TXL/TXLPrint.html
+++ b/FTWeb/ViewV5/AppPage/TXL/TXLPrint.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
     <link href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css" rel="stylesheet" />
-    <link href="/ViewV5/CSS/BaseClassV3.css" rel="stylesheet" />
+    <link href="/ViewV5/CSS/BootOver.css" rel="stylesheet" />
     <script src="/ViewV5/JS/jquery-1.11.2.min.js"></script>
     <script src="/ViewV5/JS/avalon.js"></script>
     <script src="/ViewV5/JS/SZHLCommon.js?jsver=20160915"></script>
