--- a/FTWeb/ViewV5/AppPage/XXFB/SelMatterDraft.html
+++ b/FTWeb/ViewV5/AppPage/XXFB/SelMatterDraft.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <link href="/ViewV5/CSS/WX.css" rel="stylesheet" />
+    <link href="/ViewV5/AppPage/XXFB/WX.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css">
     <style>
         .select {
