--- a/FTWeb/ViewV5/AppPage/XXFB/XXFBChildrenVIEw.html
+++ b/FTWeb/ViewV5/AppPage/XXFB/XXFBChildrenVIEw.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Expires" content="0" />
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1467447454_1909795.css">
-    <link href="/ViewV5/CSS/BaseClassV3.css" rel="stylesheet" />
+    <link href="/ViewV5/CSS/BootOver.css" rel="stylesheet" />
     <script src="/ViewV5/JS/jquery-1.11.2.min.js"></script>
     <script src="/ViewV5/JS/layer/layer.js"></script>
     <script src="/ViewV5/JS/avalon1.47.js"></script>
