--- a/FTWeb/ViewV5/AppPage/XXFB/XXFBVIEW.html
+++ b/FTWeb/ViewV5/AppPage/XXFB/XXFBVIEW.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/index.css">
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/default.css">
-    <link href="/ViewV5/CSS/WX.css" rel="stylesheet" />
+    <link href="/ViewV5/AppPage/XXFB/WX.css" rel="stylesheet" />
     <style>
     </style>
 </head>
