流程表单选择时的样式问题

--- a/FTWeb/ViewV5/AppPage/LCSP/APP_LCSP_SEL.html
+++ b/FTWeb/ViewV5/AppPage/LCSP/APP_LCSP_SEL.html
@@ -45,10 +45,12 @@
 </head>
 <body>
     <div class="container-fluid maindiv" style="margin: 20px" id="dvContent" ms-controller="APP_LCSP_SEL">
-        <div ms-repeat-lb="LCLBData">
+        <div ms-repeat-lb="LCLBData" >
             <div class="formtitle"><span>{{lb}}</span></div>
             <div class="pCard" ms-repeat-el="LCTypeData"  ms-visible="el.RelatedTable==lb"  style="width: 160px; text-align: center; min-width: 110px; background-color: transparent;" ms-attr-title="el.ProcessName" ms-click="SelLCFun(el)">
-                <div style="height: 90px"><i class="iconfont icon-biaodan" style="font-size: 80px; color: #66c9f3"></i></div>
+                <div style="height: 90px;margin-top:20px">
+                    <span class="glyphicon glyphicon-list-alt" style="font-size: 80px; color: #66c9f3"></span>
+                </div>
                 <div class="pName" style="max-width: 160px">{{el.ProcessName}}</div>
             </div>
         </div>
