--- a/FTWeb/ViewV5/index.html
+++ b/FTWeb/ViewV5/index.html
@@ -96,16 +96,16 @@
             <div class="big-nav">
                 <div class="big-nav-list">
                     <div ms-click="selyyType('WORK',this)">
-                        <a href="javascript:void(0);" class="yytype active"><i class="iconfont icon-gongzuotai mr5"></i>工作</a>
+                        <a href="javascript:void(0);" class="yytype active"><i class="iconfont icon-yingyongzongshu mr5"></i>工作</a>
                     </div>
                     <div ms-click="selyyType('CRM',this)">
-                        <a href="javascript:void(0);" class="yytype"><i class="iconfont icon-crm mr5"></i>企捷CRM</a>
+                        <a href="javascript:void(0);" class="yytype"><i class="iconfont icon-yingyongzongshu mr5"></i>企捷CRM</a>
                     </div>
                     <div ms-click="selyyType('RLZY',this)">
-                        <a href="javascript:void(0);" class="yytype"><i class="iconfont icon-group mr5"></i>人力资源</a>
+                        <a href="javascript:void(0);" class="yytype"><i class="iconfont icon-yingyongzongshu mr5"></i>人力资源</a>
                     </div>
                     <div ms-click="selyyType('YXHD',this)">
-                        <a href="javascript:void(0);" class="yytype"><i class="iconfont icon-group mr5"></i>营销活动</a>
+                        <a href="javascript:void(0);" class="yytype"><i class="iconfont icon-yingyongzongshu mr5"></i>营销活动</a>
                     </div>
                 </div>
             </div>
