--- a/FTWeb/ViewV5/AppPage/DBGL/DBGLLIST.html
+++ b/FTWeb/ViewV5/AppPage/DBGL/DBGLLIST.html
@@ -1,4 +1,4 @@
-﻿<div ms-controller="CCXJLIST">
+﻿<div ms-controller="DBGLLIST">
     <!-- 添加按钮 -->
     <div class="btn-add">
         <button type="button" class="btn btn-info btn-lg" ms-click="DBBF()"><i class="iconfont icon-jiahao ft12 mr5"></i>数据库备份</button>
@@ -65,7 +65,7 @@
 <script>
 
     var tempindex = avalon.define({
-        $id: "CCXJLIST",
+        $id: "DBGLLIST",
         curXJType: "",
         tmpListData: [],
         SelectType: function (type) {
