--- a/QJY.WEB/ViewV5/index.html
+++ b/QJY.WEB/ViewV5/index.html
@@ -85,7 +85,7 @@
                                 </table>
 
 
-                                <div class="form-group">
+                                <div class="form-group" style="margin-top:15px">
                                     <label class="col-xs-3 control-label">透明度</label>
                                     <input type="hidden" class="single-slider" value="0" />
                                 </div>
