添加手机端抄送,修复双击菜单的Bug

--- a/QJY.WEB/ViewV5/AppPage/LCSP/LCSPLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/LCSP/LCSPLIST.html
@@ -12,6 +12,7 @@
                 <li ms-click="SelectType('1')"><span class="active">我创建的</span></li>
                 <li ms-click="SelectType('2')"><span>待我审核的</span></li>
                 <li ms-click="SelectType('3')"><span>我已审核的</span></li>
+                <li ms-click="SelectType('4')"><span>抄送我的</span></li>
             </ul>
         </div>
         <div class="oh">
