--- a/QJY.WEB/ViewV5/index.html
+++ b/QJY.WEB/ViewV5/index.html
@@ -25,7 +25,7 @@
         }
     </style>
 </head>
-<body ms-controller="IndexV5">
+<body ms-controller="IndexV5" ondblclick="return false;">
     <div class="worker mb20">
         <div class="header box-shadow">
             <div class="head-center clearfix">
