--- a/QJY.WEB/View_Mobile/UI/UI_COMMON.html
+++ b/QJY.WEB/View_Mobile/UI/UI_COMMON.html
@@ -46,7 +46,7 @@
                         ComFunJS.setCookie("wxusername", r.Result1, 7);
                         getRURL(funcode);
                     } else {
-                        window.location.replace('/View_Mobile/UI/UI_ERROR.html?r=' + Math.random() + "&msg=很抱歉，您没有权限!!!");
+                        window.location.replace('/View_Mobile/UI/UI_ERROR.html?r=' + Math.random() + "&msg=很抱歉，您没有权限!!!" + r.ErrorMsg + r.Result + r.Result1);
                     }
 
                 })
