--- a/QJY.WEB/ViewV5/AppPage/CRM/GJJL.html
+++ b/QJY.WEB/ViewV5/AppPage/CRM/GJJL.html
@@ -59,7 +59,6 @@
         },
         inittemp: function (strId) {
             $.getJSON('/API/VIEWAPI.ashx?Action=CRM_GETALLKH', {}, function (resultData) {
-                if (resultData.ErrorMsg == "") {
                     tempmodel.ColumnData = resultData.Result;
                     if (tempmodel.khid) {
                         $('#conType').attr("disabled", "disabled");
@@ -68,24 +67,19 @@
                     else if (tempmodel.ColumnData.size() > 0) {
                         tempmodel.modelData.KHID = tempmodel.ColumnData[0].ID;
                     }
-                }
             })
             $.getJSON('/API/VIEWAPI.ashx?Action=XTGL_GETZIDIANLIST', { P1: 11 }, function (resultData) {
-                if (resultData.ErrorMsg == "") {
                     tempmodel.ColumnData1 = resultData.Result;
                     if (!tempmodel.modelData.Status) {
                         tempmodel.modelData.Status = resultData.Result[0].ID
                     };
-                }
             })
             if (strId) {
                 //编辑加载数据
                 $.getJSON('/API/VIEWAPI.ashx?Action=CRM_GETGJJLMODEL', { P1: strId }, function (resultData) {
-                    if (resultData.ErrorMsg == "") {
                         tempmodel.modelData = resultData.Result;
                         setTimeout("ComFunJS.initForm()", 500)
 
-                    }
                 })
             } else {
           
@@ -95,7 +89,7 @@
         modelData: { "KHID": "", "Status": "", "Date": "", "Details": "", "Type": "", "IsTX": "N", "TXDate": "", "Remark": "", "CYUser": "", "Files": "" },
         SaveData: function (callback) {
             $.post("/API/VIEWAPI.ashx?ACTION=CRM_ADDGJJL", { P1: JSON.stringify(tempmodel.modelData.$model), gjtype: "KHGL" }, function (result) {
-                return callback.call(this, $.parseJSON(result));
+                return callback.call(result);
             });
         }
     });
