--- a/QJY.WEB/ViewV5/AppPage/CRM/GJJLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/CRM/GJJLLIST.html
@@ -10,10 +10,10 @@
             <ul class="tab-type ft14">
                 <!--<li><span class="active" ms-click="SelectType('0')">全部</span></li>-->
                 <li ms-click="SelectType('1')"><span class="active">我创建的</span></li>
-                <li ms-click="SelectType('2')"><span>下属跟进</span></li>                
+                <li ms-click="SelectType('2')"><span>下属跟进</span></li>
             </ul>
         </div>
-      
+
         <!-- 搜索 -->
         <div class="oh mr20 mt20">
             <div class="input-group ml15" style="width: 500px; float: left">
@@ -23,7 +23,7 @@
         </div>
     </div>
     <!-- 展开更多选项 -->
-    <div class="add-tab ft14 tc mt20" style="display:none;">
+    <div class="add-tab ft14 tc mt20" style="display: none;">
         <span>更多筛选<i class="caret"></i></span>
     </div>
     <!-- 表格 -->
@@ -31,21 +31,18 @@
         <table class="table table-striped table-responsive table-hover">
             <thead>
                 <tr>
-                    <th class="tc">
-                        序号
+                    <th class="tc">序号
                     </th>
                     <th ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{im.ColText}}</th>
-                    <th style="width:80px;">
-                    </th>
+                    <th style="width: 80px;"></th>
                 </tr>
             </thead>
             <tbody>
-                <tr ms-repeat-el="tmpListData" >
-                    <td class="tc">
-                        {{$index+1+page.pagecount*(page.pageindex-1)}}
+                <tr ms-repeat-el="tmpListData">
+                    <td class="tc">{{$index+1+page.pagecount*(page.pageindex-1)}}
                     </td>
-                    <td ms-repeat-im="ShowColumns" ms-click="ViewFormNew('CRM_GJJL',el.ID,'',$event)" ms-class-1="lk:im.type=='link'" style="min-width:120px;" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>
-                    <td style="min-width:100px;">
+                    <td ms-repeat-im="ShowColumns" ms-click="ViewFormNew('CRM_GJJL',el.ID,'',$event)" ms-class-1="lk:im.type=='link'" style="min-width: 120px;" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>
+                    <td style="min-width: 100px;">
                         <span class="btn-click">
                             <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-if="el.CRUser==userName" ms-click="EditForm('CRM_GJJL',el.ID,'',$event)">
                                 <i class="iconfont icon-bianji"></i>
@@ -59,7 +56,10 @@
 
             </tbody>
             <tfoot>
-                <tr ms-if="isnull"><td class="tc"></td><td>暂无数据</td></tr>
+                <tr ms-if="isnull">
+                    <td class="tc"></td>
+                    <td>暂无数据</td>
+                </tr>
             </tfoot>
         </table>
         <div class="ui-datatable-page ft14 pl20">
@@ -67,8 +67,7 @@
             <div id="pageDiv" ms-visible="model.page.total>model.pageNum[0].num" class="pull-right"></div>
             <div class="pull-right" ms-visible="tmpListData.size()!=0">
                 <span>共{{model.page.total}}条记录</span>
-                <span ms-visible="model.page.total>model.pageNum[0].num">
-                    选择每页条数
+                <span ms-visible="model.page.total>model.pageNum[0].num">选择每页条数
                     <select style="height: 25px; width: 50px;" ms-change="selNum(this.value)" ms-duplex="model.page.pagecount">
                         <option ms-repeat-pg="pageNum" ms-attr-value="pg.num" ms-attr-selected="pg.num==model.page.pagecount?'selected':''">{{pg.num}}</option>
                     </select>
@@ -77,7 +76,7 @@
 
         </div>
     </div>
-    
+
 </div>
 
 <script>
@@ -86,7 +85,7 @@
         $id: "GJJLLIST",
         curXJType: "",
         seartype2: "",
-        tmpListData:[],
+        tmpListData: [],
         TypeData1: [{ "TypeName": "电话" }, { "TypeName": "QQ" }, { "TypeName": "微信" }, { "TypeName": "拜访" }, { "TypeName": "邮件" }, { "TypeName": "短信" }, { "TypeName": "其他" }],
         SelectFSType: function (type) {
             tempindex.seartype2 = type;
@@ -113,7 +112,7 @@
                 { "ColName": "CRUser", "ColText": "跟进记录人员", "IsSel": true, "format": "username" },
                 { "ColName": "GJZT", "ColText": "状态", "IsSel": true, "format": "text" },
                 //{ "ColName": "Type", "ColText": "方式", "IsSel": true, "format": "text" },
-                { "ColName": "Details", "ColText": "描述", "IsSel": true, "format": "text","len":"20" },
+                { "ColName": "Details", "ColText": "描述", "IsSel": true, "format": "text", "len": "20" },
                 { "ColName": "CRDate", "ColText": "时间", "IsSel": true, "format": "dateformat" }
             ]);
             //类型数据
@@ -124,13 +123,9 @@
         DELGJJL: function (item) {
             top.ComFunJS.winconfirm("确认要删除吗", function () {
                 $.post('/API/VIEWAPI.ashx?Action=CRM_DELGJJL', { "P1": item.ID }, function (result) {
-                    result = JSON.parse(result)
-                    if (result.ErrorMsg == "") {
-                        top.ComFunJS.winsuccess("删除成功");
-                        tempindex.tmpListData.remove(item);
-                    } else {
-                        top.ComFunJS.winwarning(result.ErrorMsg);
-                    }
+                    top.ComFunJS.winsuccess("删除成功");
+                    tempindex.tmpListData.remove(item);
+
                 })
             }, function () { })
         },
@@ -138,27 +133,23 @@
             model.page.pageindex = 1;
             tempindex.tmpListData.clear();
             $.getJSON('/API/VIEWAPI.ashx?Action=CRM_GETGJJLLIST', { p: 1, P1: model.search.seartype, pagecount: model.page.pagecount, Content: model.search.searchcontent, lb: tempindex.curXJType, P2: tempindex.seartype2 }, function (resultData) {
-                if (resultData.ErrorMsg == "") {
-                    tempindex.tmpListData = resultData.Result;
-                    if (tempindex.tmpListData.size() == 0) { model.isnull = true; } else { model.isnull = false; }
-                    model.page.total = resultData.Result1;
-                    laypage({
-                        cont: 'pageDiv', //容器。值支持id名、原生dom对象，jquery对象。
-                        pages: Math.ceil(parseInt(resultData.Result1) * 1.0 / model.page.pagecount), //通过后台拿到的总页数
-                        curr: 1, //初始化当前页
-                        skin: 'molv',
-                        jump: function (e) { //触发分页后的回调
-                            if (e.curr != model.page.pageindex) {
-                                $.getJSON('/API/VIEWAPI.ashx?Action=CRM_GETGJJLLIST', { p: e.curr, P1: model.search.seartype, pagecount: model.page.pagecount, Content: model.search.searchcontent, lb: tempindex.curXJType, P2: tempindex.seartype2 }, function (resultData) {
-                                    if (resultData.ErrorMsg == "") {
-                                        tempindex.tmpListData = resultData.Result;
-                                    }
-                                })
-                                model.page.pageindex = e.curr;
-                            }
+                tempindex.tmpListData = resultData.Result;
+                if (tempindex.tmpListData.size() == 0) { model.isnull = true; } else { model.isnull = false; }
+                model.page.total = resultData.Result1;
+                laypage({
+                    cont: 'pageDiv', //容器。值支持id名、原生dom对象，jquery对象。
+                    pages: Math.ceil(parseInt(resultData.Result1) * 1.0 / model.page.pagecount), //通过后台拿到的总页数
+                    curr: 1, //初始化当前页
+                    skin: 'molv',
+                    jump: function (e) { //触发分页后的回调
+                        if (e.curr != model.page.pageindex) {
+                            $.getJSON('/API/VIEWAPI.ashx?Action=CRM_GETGJJLLIST', { p: e.curr, P1: model.search.seartype, pagecount: model.page.pagecount, Content: model.search.searchcontent, lb: tempindex.curXJType, P2: tempindex.seartype2 }, function (resultData) {
+                                tempindex.tmpListData = resultData.Result;
+                            })
+                            model.page.pageindex = e.curr;
                         }
-                    });
-                }
+                    }
+                });
             })
         }
     })
