--- a/QJY.WEB/ViewV5/AppPage/CRM/HTGJ.html
+++ b/QJY.WEB/ViewV5/AppPage/CRM/HTGJ.html
@@ -43,23 +43,18 @@
             tempmodel.ColumnData1 = [{ "ID": "0", "TypeName": "未开始" }, { "ID": "1", "TypeName": "执行中" }, { "ID": "2", "TypeName": "成功结束" }, { "ID": "3", "TypeName": "意外终止" }];
 
             $.getJSON('/API/VIEWAPI.ashx?Action=CRM_GETHTMODEL', { P1: tempmodel.htid }, function (resultData) {
-                if (resultData.ErrorMsg == "") {
                     tempmodel.htmodel = resultData.Result;
                     if (!tempmodel.htmodel.HTStatus) {
                         tempmodel.htmodel.HTStatus = 0;
                     }
-                    console.log(JSON.stringify(tempmodel.htmodel.$model));
                     setTimeout(" ComFunJS.initForm()", 500);
-                }
             })
 
             if (strId) {
                 //编辑加载数据
                 $.getJSON('/API/VIEWAPI.ashx?Action=CRM_GETGJJLMODEL', { P1: strId }, function (resultData) {
-                    if (resultData.ErrorMsg == "") {
                         tempmodel.modelData = resultData.Result;
                         setTimeout("ComFunJS.initForm()", 500)
-                    }
                 })
             } else {
               
@@ -72,7 +67,7 @@
             tempmodel.modelData.Status = tempmodel.htmodel.HTStatus;
 
             $.post("/API/VIEWAPI.ashx?ACTION=CRM_ADDGJJL", { P1: JSON.stringify(tempmodel.modelData.$model), gjtype: "HTGL" }, function (result) {
-                return callback.call(this, $.parseJSON(result));
+                return callback.call(this, result);
             });
         }
     });
