--- a/QJY.WEB/ViewV5/AppPage/CRM/KHLXR.html
+++ b/QJY.WEB/ViewV5/AppPage/CRM/KHLXR.html
@@ -155,21 +155,17 @@
             if (strId) {
                 //编辑加载数据
                 $.getJSON('/API/VIEWAPI.ashx?Action=CRM_GETKHLXRMODEL', { P1: strId }, function (resultData) {
-                    if (resultData.ErrorMsg == "") {
                         tempmodel.modelData = resultData.Result;
                         if (tempmodel.modelData.Birthday && tempmodel.modelData.Birthday.length > 10) {
                             tempmodel.modelData.Birthday = tempmodel.modelData.Birthday.substring(0, 10);
                         }
                         $.getJSON('/API/VIEWAPI.ashx?Action=CRM_GETALLKH', {}, function (resultData) {
-                            if (resultData.ErrorMsg == "") {
                                 tempmodel.ColumnData = resultData.Result;
 
                                 tempmodel.kh();
-                            }
                         })
 
                         setTimeout("ComFunJS.initForm()", 500);
-                    }
                 })
             } else {
                 $.getJSON('/API/VIEWAPI.ashx?Action=CRM_GETALLKH', {}, function (resultData) {
@@ -189,7 +185,7 @@
         modelData: { "KHID": "", "UserXM": "", "UserSex": "", "TelePhone": "", "Department": "", "Position": "", "EMail": "", "QQ": "", "Weixin": "", "Address": "", "Remark": "", "Files": "", "WebSite": "", "PostCode": "", "Birthday": "", "Extension": "", "FixNo": "", "Education": "", "Company": "", "Mailbox": "", "Others": "" },
         SaveData: function (callback) {
             $.post("/API/VIEWAPI.ashx?ACTION=CRM_ADDKHLXR", { P1: JSON.stringify(tempmodel.modelData.$model) }, function (result) {
-                return callback.call(this, $.parseJSON(result));
+                return callback.call(result);
             });
         }, kh: function () {
             tempmodel.ColumnData.forEach(function (item) {
@@ -209,12 +205,7 @@
                     eventadd: function (val) {
                         if (val) {
                             $.getJSON('/API/VIEWAPI.ashx?Action=CRM_ADDKHBYNAME', { P1: val }, function (resultData) {
-                                if (resultData.ErrorMsg == "") {
                                     tabsel.extaddrow(resultData.Result)
-                                }
-                                else {
-                                    ComFunJS.winwarning(resultData.ErrorMsg);
-                                }
                             })
                         }
                     }
