--- a/QJY.WEB/View_Mobile/UI/UI_LCSP_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_LCSP_LIST.html
@@ -393,18 +393,18 @@
                     model.type = 1;
                 }
                 model.getdata(model.type);
-                util.toucher(document.getElementById('touchcontent'))
-                    .on('swipeLeft', '.list-container', function () {
-                        model.type = model.type == 3 ? 1 : model.type * 1 + 1;
-                        model.getdata(model.type)
-                        return false;
-                    })
-                    .on('swipeRight', '.list-container', function () {
-                        model.type = model.type == 1 ? 3 : model.type * 1 - 1;
-                        model.getdata(model.type)
+                //util.toucher(document.getElementById('touchcontent'))
+                //    .on('swipeLeft', '.list-container', function () {
+                //        model.type = model.type == 3 ? 1 : model.type * 1 + 1;
+                //        model.getdata(model.type)
+                //        return false;
+                //    })
+                //    .on('swipeRight', '.list-container', function () {
+                //        model.type = model.type == 1 ? 3 : model.type * 1 - 1;
+                //        model.getdata(model.type)
 
-                        return false;
-                    })//左右滑动事件
+                //        return false;
+                //    })//左右滑动事件
 
                 $.getJSON('/API/VIEWAPI.ashx?Action=LCSP_GETWFPDLIST', { P1: 1 }, function (resultData) {
                     if (resultData.ErrorMsg == "") {
