--- a/QJY.WEB/View_Mobile/UI/UI_RWGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_RWGL_LIST.html
@@ -103,7 +103,8 @@
                             <div class="card-content-inner" style="padding-top: 0; padding-bottom: 0.1rem;" ms-if="el.Files">
                                 <ul class="filelist">
                                     <li ms-repeat-file="el.FileList">
-                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="{{ComFunJS.getfile(file.ID)}}" />
+                                        <img ms-if="ComFunJS.isPic(file.FileExtendName)" ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="{{ComFunJS.getfile(file.ID)}}" />
+                                        <img ms-if="!ComFunJS.isPic(file.FileExtendName)" ms-on-click="viewfile(file)" ms-attr-src="/View_Mobile/Images/qywd/{{file.FileExtendName}}.png" />
                                         <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                     </li>
                                 </ul>
@@ -134,7 +135,8 @@
                                                     <ul class="filelist">
                                                         <!--repeat428537517786-->
                                                         <li ms-repeat-file="pl.FileList">
-                                                            <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="{{ComFunJS.getfile(file.ID)}}" />
+                                                            <img ms-if="ComFunJS.isPic(file.FileExtendName)" ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="{{ComFunJS.getfile(file.ID)}}" />
+                                                            <img ms-if="!ComFunJS.isPic(file.FileExtendName)" ms-on-click="viewfile(file)" ms-attr-src="/View_Mobile/Images/qywd/{{file.FileExtendName}}.png" />
                                                             <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                                         </li>
                                                     </ul>
@@ -316,7 +318,7 @@
             },
             viewfile: function (file) {
                 if (ComFunJS.isPic(file.FileExtendName)) {
-                    ComFunJS.viewbigimg(this)
+                    ComFunJS.viewbigimg(this);
                     return;
                 }
                 if (ComFunJS.isOffice(file.FileExtendName) && file.ISYL == "Y") {
