--- a/QJY.WEB/ViewV5/AppPage/LCSP/LCSPLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/LCSP/LCSPLIST.html
@@ -32,8 +32,8 @@
 
         <!-- 搜索 -->
         <div class="oh">
-            <div class="input-group ml15" style="width: 295px;">
-                <input type="search" class="form-control" ms-duplex="search.searchcontent" placeholder="搜索流程名称">
+            <div class="input-group ml15" style="width: 395px;">
+                <input type="search" class="form-control" ms-duplex="search.searchcontent" placeholder="搜索流程名称,或者流程关键字查询">
                 <span class="input-group-addon" ms-click="GetLIST()">搜索</span>
             </div>
         </div>
