--- a/QJY.WEB/ViewV5/AppPage/LCSP/LCSZ.html
+++ b/QJY.WEB/ViewV5/AppPage/LCSP/LCSZ.html
@@ -164,7 +164,8 @@
                   }
               });
                 }
-            }, SelRole: function (item) {
+            },
+            SelRole: function (item) {
                 if (item.NodeType == "START") {
                     return;
                 }
