--- a/QJY.WEB/ViewV5/AppPage/JFBX/JFBX.html
+++ b/QJY.WEB/ViewV5/AppPage/JFBX/JFBX.html
@@ -31,8 +31,13 @@
                 <li class="add-item add-width  fl-right">
                     <label class="add-item-label">关联项目</label>
                     <div class="add-ic" >
+                        <div class="input-group ">
                         <input type="text" class="form-control szhl_select">
+
+                            <span class="input-group-addon">请选择</span>
+                        </div>
                     </div>
+
                 </li>
                 <li class="add-item add-widthall">
                     <label class="add-item-label"><i>*</i>标题</label>
