--- a/QJY.WEB/ViewV5/AppPage/XTGL/ROLEINDEX.html
+++ b/QJY.WEB/ViewV5/AppPage/XTGL/ROLEINDEX.html
@@ -67,7 +67,7 @@
                 <div class="page-title ft16 " style="margin-top: 5px;margin-bottom: 0px;">
                     <h4 class="title">{{arr}}</h4>
                 </div>
-                <div class="xtgl-list" ms-repeat-item="MenuAuthFun" ms-visible="item.ModelCode!='RLZY'&&item.ModelType==arr">
+                <div class="xtgl-list" ms-repeat-item="MenuAuthFun" ms-visible="item.ModelType==arr">
                     <table class="table">
                         <tbody>
                             <tr>
