完善手机端注册演示环境

--- a/QJY.WEB/ViewV5/index.html
+++ b/QJY.WEB/ViewV5/index.html
@@ -52,7 +52,7 @@
                                 <i class="iconfont icon-erweima tip" data-toggle="tooltip" title="扫描关注" data-placement="bottom"></i>
                             </a>
                             <div class="dropdown-menu animated fadeInRight" style="overflow: auto; width: 200px; text-align: center">
-                                <img width="100%" src='/ViewV5/images/qrcode.jpg'>
+                                <img width="100%" src='/ViewV5/images/qrcode.png'>
                                 扫描二维码，关注企业号
                             </div>
                         </li>
