--- a/QJY.WEB/ViewV5/login.html
+++ b/QJY.WEB/ViewV5/login.html
@@ -162,7 +162,7 @@
                 <b class="sm" style="line-height: 29px;">扫描二维码关注企业号</b>
                 <div class="erweima_pic" style="display: none">
                     <span class="sanjiao"></span>
-                    <img src="/ViewV5/images/qrcode.jpg" id="qyewm" style="top: 8px; position: absolute; z-index: 33333">
+                    <img src="/ViewV5/images/qrcode.pmg" id="qyewm" style="top: 8px; position: absolute; z-index: 33333">
                 </div>
             </div>
 
