--- a/QJY.WEB/WZWeb/index.html
+++ b/QJY.WEB/WZWeb/index.html
@@ -143,7 +143,7 @@
                     企捷协同办公平台
                 </div>
                 <ul class="menu">
-                    <li class="active"><a href="http://oa.fullteemzz.com/">首页</a> </li>
+                    <li class="active"><a href="http://www.qijiekeji.com/">首页</a> </li>
                     <li><a href="/WZWeb/history.html">更新日志</a></li>
                     <li><a href="http://git.oschina.net/qikj/QJ_Single" target="_blank">下载源码</a></li>
 
@@ -159,7 +159,7 @@
                 <img src="/WZWeb/images/File.png" style="opacity: 1; width: 650px; position: absolute; right: -50px; bottom: -50px; height :380px;" />
             </h2>
             <div class="btn">
-                <a href="http://qj.qijiekeji.com" target="_blank" class="mobile_hide">立即体验</a>
+                <a href="/ViewV5/login.html" target="_blank" class="mobile_hide">立即体验</a>
                 <a id="submitBug" href="http://git.oschina.net/qikj/QJ_Single" class="video" target="_blank">下载源码</a>
             </div>
         </div>
@@ -364,7 +364,7 @@
                 <div class="weixing-container">
                     <div class="weixing-show">
                         <div class="weixing-txt">微信扫一扫<br>体验企业号</div>
-                        <img class="weixing-ma" src="/WZWeb/images/qrcode.jpg">
+                        <img class="weixing-ma" src="/WZWeb/images/zhuce.png">
                         <div class="weixing-sanjiao"></div>
                         <div class="weixing-sanjiao-big"></div>
                     </div>
